--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+body{
+  font-family: 'Inter', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#Header{
+  background-color: #F55A5A;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 0%;
+  width: 100%;
+}
+
+#Header > img{
+  width: 20px;
+  height: 20px;
+  padding-top: 10px;
+  padding-right: 10px ;
+}
+
+#Header >p{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#card-img{
+  width: 50%;
+  min-width: 200px;
+  border-radius: 10px;
+  object-fit: cover;
+  margin-right: 40px;
+  margin-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#course-container{
+  display:flex;
+}
+
+
+#main-info-location{
+  display: flex;
+}
+#main-info-location > img{
+  margin-top:20px;
+  width: 15px;
+  height: 15px;
+}
+
+#main-info-location > a{
+  margin-top: 15px;
+  margin-left: 10px;
+  color: #918E9B;
+}
+
+#card-title{
+  margin-top: 0px;
+}
+
+#card-date{
+  font-weight: bold;
 }
